[package]
name = "quic-tunnel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.63"
clap = { version = "3.2.20", features = ["derive"] }
env_logger = "0.9.0"
futures-util = "0.3.24"
hyper = { version = "0.14.20", features = ["server", "http1", "tcp", "client"] }
log = "0.4.17"
quinn = "0.8.5"
rustls = "0.20.6"
rustls-pemfile = "1.0.1"
tokio = { version = "1.21.0", features = ["rt", "rt-multi-thread", "io-util", "macros", "net"] }
webpki-roots = "0.22.4"
